<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>benchmark_test</name>
  <version>0.0.1</version>
  <description>Benchmark tests for tf2 vs tfl</description>
  <maintainer email="nishino@todo.todo">nishino</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>tfl</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
